--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,19 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.4.0</version>
+          <configuration>
+            <mainClass>banana.Main</mainClass>
+            <arguments>
+              <argument>apnd</argument>
+                <argument>1</argument>
+              <argument>D://config.ini//1</argument>
+            </arguments>
+          </configuration>
+        </plugin>
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
