--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
           <artifactId>exec-maven-plugin</artifactId>
           <version>1.4.0</version>
           <configuration>
-            <mainClass>banana.GuiMaker</mainClass>
+            <mainClass>banana.Main</mainClass>
             <arguments>
               <argument>ren_con</argument>
                 <argument>1</argument>
